--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            Xingliang Yuan's site
 description:      Welcome to my site.
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:               http://xyuancs.github.io
+url:               https://xyuancs.github.io
 #http://localhost:4000
 disqus_shortname: xyuan
 
