--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
-title:            Xingliang Yuan's site
+title:            Yuchuan Luo's site
 description:      Welcome to my site.
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:               https://xyuancs.github.io
+url:               https://fooc.github.io
 #http://localhost:4000
-disqus_shortname: xyuan
+disqus_shortname: lychuan
 
 # Owner/author information
 owner:
-  name:           Xingliang Yuan
-  avatar:         yxl.jpg
+  name:           Yuchuan Luo
+  avatar:         https://avatars1.githubusercontent.com/u/16385091?v=3&u=240d2c0a7b49b6c8f5cee932231d4b1db68d2bd9&s=400
   bio:            When you risk it all, sky is the limit.
-  email:          xyuancs@gmail.com
+  email:          fermats.cs@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   #twitter: jponttuset
   #linkedin: jponttuset
-  google_scholar: 81yWaCoAAAAJ
+  google_scholar: xxx
   #google_plus: 113718226018314522413
-  github: xyuancs
+  github: fooc
 # Analytics and webmaster tools stuff goes here
 #google_analytics: UA-52736040-1
 #google_verify:
