--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,12 @@ disqus_shortname: lychuan
 owner:
   name:           Yuchuan Luo
   avatar:         https://avatars1.githubusercontent.com/u/16385091?v=3&u=240d2c0a7b49b6c8f5cee932231d4b1db68d2bd9&s=400
-  bio:            When you risk it all, sky is the limit.
+  bio:            Keep going never give up.
   email:          fermats.cs@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   #twitter: jponttuset
   #linkedin: jponttuset
-  google_scholar: xxx
+  google_scholar: 
   #google_plus: 113718226018314522413
   github: fooc
 # Analytics and webmaster tools stuff goes here
